--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.1.4",
     "esm": "^3.2.25",
     "express": "^4.18.2",
+    "joi": "^17.9.2",
     "mongoose": "^7.2.2"
   },
   "type": "module"
