--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "dayjs": "^1.11.8",
     "formik": "^2.4.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
